article section added

--- a/index.html
+++ b/index.html
@@ -121,6 +121,32 @@
 
 
 
+      <section id="article-section" class="my-5 py-2">
+        <div class="container">
+          <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-4">
+            <div class="col col-lg-6 d-block d-lg-flex     align-items-center justify-content-center">
+              <div class="article-img">
+                <img class=" img-fluid m-auto"  src="images/social-mobile.png" alt="Article images">
+              </div>
+              </div>
+              <div class="col col-lg-6 d-block d-lg-flex     align-items-center justify-content-center">
+               <div class="article-details ">
+                <h1 class=" fw-bold">Why I say old chap that is spiffing bodge, blag pardon.</h1>
+                <p class="  py-4 small">Why I say old chap that is spiffing bodge, blag pardon me buggered mufty Oxford butty bubble and squeak wind up, brown bread the full monty bloke ruddy cras tickety-boo squiffy. Starkers dropped a clanger lurgy is cack excuse my French what a plonker blower.!
+
+                  Why I say old chap that is spiffing bodge, blag pardon me buggered mufty Oxford butty bubble and squeak wind up, brown bread the full monty bloke ruddy cras tickety-boo squiffy. Starkers dropped a clanger lurgy is cack excuse my French what a plonker blower.!
+                </p>
+               <div>
+                <a href="#" class="article-btn text-white">Begin Today</a>
+               </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+
 
 
     </main>
