responsive error solved

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="container">
               <a class="navbar-brand brand-logo" href="#">Lumia</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span><i class="fas fa-bars  menu-icon"></i></span>
+                <span><i class="fas fa-bars  menu-icon ms-auto"></i></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto ">
@@ -81,8 +81,8 @@
 
       <section id="info-blogs" class="my-5 py-5">
         <div class="container">
-          <div class="row row-cols-1 g-4 row-cols-md-2 row-cols-lg-3 justify-content-center info-cards">
-            <div class="col d-block d-lg-flex">
+          <div class="row row-cols-1 g-4 row-cols-md-2 row-cols-lg-3 info-cards">
+            <div class="col d-block justify-content-center  d-lg-flex">
               <div class="card d-flex justify-content-center align-items-center  p-5">
               <div class="card-logo">
                 <img  src="images/logo-icon/notepad.svg" class="notepad-icon img-fluid " alt="notepad icon">
