navbar problem solved

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <span><i class="fas fa-bars  menu-icon ms-auto"></i></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto ">
+                <ul class="navbar-nav text-center ms-auto ">
                   <li class="nav-item">
                     <a class="nav-link active fw-bold" aria-current="page" href="#">Home</a>
                   </li>
