--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                 </div>
                 <div class="banner-img">
-                  <img   src="images/banner-img.png" alt="">
+                  <img class=" img-fluid"   src="images/banner-img.png" alt="">
                 </div>
               </div>
             </div>
