--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <a class="nav-link" href="#">Contact</a>
                   </li>  
                 </ul>
-                <button class="btn nav-btn d-none d-lg-block">Get Started</button>
+                <button class="btn nav-btn text-center">Get Started</button>
               </div>
             </div>
           </nav>
