customer counting and sponsore section added using position

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="col d-block d-lg-flex">
               <div class="card d-flex justify-content-center align-items-center  p-5">
               <div class="card-logo">
-                <img  src="images/logo-icon/atom 2.svg" class="atom-icon img-fluid " alt="notepad icon">
+                <img  src="images/logo-icon/atom 2.svg" class="atom-icon img-fluid " alt="notepad-icon">
               </div>
                 <div class="card-body text-center my-3">
                   <h3 class="card-title">Grid and Guides</h3>
@@ -144,6 +144,57 @@
           </div>
         </div>
       </section>
+
+
+      <section id="customer-banner" class="sponsore">
+        <div class="container-fluid">
+          <div class="customer-counting">
+           <div class="counting-area d-block d-md-flex justify-content-md-evenly align-items-md-center">
+              <div class=" text-white text-center">
+                <h4 class=" fw-bold">335</h4>
+                <p class=" ">Cutomer</p>
+              </div>
+              <div class=" text-white text-center">
+                <h4 class=" fw-bold">335</h4>
+                <p class=" ">Cutomer</p>
+              </div>
+              <div class="  text-center">
+                <h4 class=" fw-bold">335</h4>
+                <p class=" ">Cutomer</p>
+              </div>
+              <div class=" text-white text-center">
+                <h4 class=" fw-bold">335</h4>
+                <p class=" ">Cutomer</p>
+              </div>
+              <div class=" text-white text-center">
+                <h4 class=" fw-bold">335</h4>
+                <p class=" ">Cutomer</p>
+              </div>
+           </div>
+           <div class="sponsore-logos w-75 d-block d-md-flex  justify-content-md-evenly align-items-md-center ">
+
+             <div class="sponsore-logo">
+               <img src="images/sponsore-logo.png" alt="">
+              </div>
+             <div class="sponsore-logo">
+               <img src="images/sponsore-logo.png" alt="">
+              </div>
+             <div class="sponsore-logo">
+               <img src="images/sponsore-logo.png" alt="">
+              </div>
+             <div class="sponsore-logo">
+               <img src="images/sponsore-logo.png" alt="">
+              </div>
+             <div class="sponsore-logo">
+               <img src="images/sponsore-logo.png" alt="">
+              </div>
+           </div>
+           
+
+          </div>
+        </div>
+      </section>
+
 
 
 
