responsiveness error fixed

--- a/index.html
+++ b/index.html
@@ -56,14 +56,16 @@
 
           <section id="landing-banner" class="my-3">
             <div class="container">
-              <div class="banner-item d-flex flex-column flex-lg-row justify-content-lg-between align-content-center justify-content-center my-5 flex-1">
-                <div class="banner-info mb-5">
+              <div class="banner-item  d-block d-md-flex justify-content-center align-content-center my-5">
+                <div class="banner-info col-12 col-md-6 mb-5">
                   <h1 class=" banner-header fw-bold">Convert and Keep more customers from your location</h1>
-                  <p class=" py-3">Why I say old chap that is spiffing off his nut arse pear shaped plastered Jeffrey bodge barney some dodgy.!!</p>
+                  <p class=" py-3">Why I say old chap that is spiffing off his nut arse pear shaped plastered Jeffrey bodge barney some dodgy.!!
+                    
+                  </p>
                   <a href="#" class="banner-btn text-white ">Begin Today</a>
 
                 </div>
-                <div class="banner-img">
+                <div class="banner-img col-12 col-md-6 ">
                   <img class=" img-fluid"   src="images/banner-img.png" alt="">
                 </div>
               </div>
