container error fixed

--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
 
 
       <section id="customer-banner" class="sponsore">
-        <div class="container-fluid">
-          <div class="customer-counting">
-           <div class="counting-area d-block d-md-flex justify-content-md-evenly align-items-md-center">
+        <div class="container">
+          <div class="customer-counting d-none d-lg-block">
+           <div class="counting-area  d-lg-flex justify-content-lg-evenly align-items-md-center">
               <div class=" text-white text-center">
                 <h4 class=" fw-bold">335</h4>
                 <p class=" ">Cutomer</p>
