marketing section added with responsiveness

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-4">
             <div class="col col-lg-6 d-block d-lg-flex     align-items-center justify-content-center">
               <div class="article-img">
-                <img class=" img-fluid m-auto"  src="images/social-mobile.png" alt="Article images">
+                <img class=" img-fluid m-auto"  src="images/social-mobile.png" alt="Article-images">
               </div>
               </div>
               <div class="col col-lg-6 d-block d-lg-flex     align-items-center justify-content-center">
@@ -176,22 +176,46 @@
            <div class="sponsore-logos w-75 d-block d-md-flex  justify-content-md-evenly align-items-md-center ">
 
              <div class="sponsore-logo">
-               <img src="images/sponsore-logo.png" alt="">
+               <img class=" img-fluid" src="images/sponsore-logo.png" alt="">
               </div>
              <div class="sponsore-logo">
-               <img src="images/sponsore-logo.png" alt="">
+               <img class=" img-fluid" src="images/sponsore-logo.png" alt="">
               </div>
              <div class="sponsore-logo">
-               <img src="images/sponsore-logo.png" alt="">
+               <img class=" img-fluid" src="images/sponsore-logo.png" alt="">
               </div>
              <div class="sponsore-logo">
-               <img src="images/sponsore-logo.png" alt="">
+               <img class=" img-fluid" src="images/sponsore-logo.png" alt="">
               </div>
              <div class="sponsore-logo">
-               <img src="images/sponsore-logo.png" alt="">
+               <img class=" img-fluid" src="images/sponsore-logo.png" alt="">
               </div>
            </div>
            
+
+          </div>
+        </div>
+      </section>
+
+
+      <section id="marketing-section">
+        <div class="container">
+          <div class="marketing-article d-flex flex-column flex-md-row justify-content-center align-items-center ">
+            <div class="article col-md-6">
+              <h1>
+                Social Media Marketing is the Best Ever
+              </h1>
+              <p class=" py-2">Why I say old chap that is spiffing bodge, blag pardon me buggered mufty Oxford butty bubble and squeak wind up, brown bread the full monty bloke ruddy cras tickety-boo squiffy. Starkers dropped a clanger lurgy is cack excuse my French what a plonker blower.!
+                Why I say old chap that is spiffing bodge, blag pardon me buggered mufty Oxford butty bubble and squeak wind up, brown bread the full monty.!</p>
+                <div class=" py-4 mb-5 ">
+                  <a href="#" class="article-btn text-white">Begin Today</a>
+                </div>
+            </div>
+            <div class="marketing-img py-md-5 py-lg-0 col-md-6">
+              <img class=" img-fluid" src="images/clock-img.png" alt="Clock-image">
+
+          </div>
+          
 
           </div>
         </div>
