icon center problem solved

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
           <div class="row row-cols-1 g-4 row-cols-md-2 row-cols-lg-3 info-cards">
             <div class="col d-block justify-content-center  d-lg-flex">
               <div class="card d-flex justify-content-center align-items-center  p-5">
-              <div class="card-logo">
-                <img  src="images/logo-icon/notepad.svg" class="notepad-icon img-fluid " alt="notepad icon">
+              <div class="card-logo notepad-icon d-flex justify-content-center align-items-center">
+                <img  src="images/logo-icon/notepad.svg" class=" img-fluid " alt="notepad-icon">
               </div>
                 <div class="card-body text-center my-3">
                   <h3 class="card-title">Export Presets</h3>
@@ -97,8 +97,8 @@
             </div>
             <div class="col d-block d-lg-flex">
               <div class="card d-flex justify-content-center align-items-center  p-5">
-              <div class="card-logo">
-                <img  src="images/logo-icon/atom 2.svg" class="atom-icon img-fluid " alt="notepad-icon">
+              <div class="card-logo atom-icon d-flex justify-content-center align-items-center">
+                <img  src="images/logo-icon/atom 2.svg" class=" img-fluid " alt="notepad-icon">
               </div>
                 <div class="card-body text-center my-3">
                   <h3 class="card-title">Grid and Guides</h3>
@@ -108,8 +108,8 @@
             </div>
             <div class="col d-block d-lg-flex">
               <div class="card d-flex justify-content-center align-items-center  p-5">
-              <div class="card-logo">
-                <img  src="images/logo-icon/bell 1.svg" class="bell-icon img-fluid rounded-circle" alt="notepad icon">
+              <div class="card-logo bell-icon d-flex justify-content-center align-items-center">
+                <img   src="images/logo-icon/bell 1.svg" class=" img-fluid" alt="notepad icon">
               </div>
                 <div class="card-body text-center my-3">
                   <h3 class="card-title">Prototyping</h3>
