pricing section added and navbar fixed

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span><i class="fas fa-bars  menu-icon ms-auto"></i></span>
               </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
+              <div class="collapse navbar-collapse text-center" id="navbarNav">
                 <ul class="navbar-nav text-center ms-auto ">
                   <li class="nav-item">
                     <a class="nav-link active fw-bold" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
+                    <a class="nav-link" href="#services">Services</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Work</a>
@@ -46,7 +46,7 @@
                     <a class="nav-link" href="#">Contact</a>
                   </li>  
                 </ul>
-                <button class="btn nav-btn text-center">Get Started</button>
+                <button class="btn nav-btn  text-center">Get Started</button>
               </div>
             </div>
           </nav>
@@ -83,7 +83,7 @@
 
       <section id="info-blogs" class="my-5 py-5">
         <div class="container">
-          <div class="row row-cols-1 g-4 row-cols-md-2 row-cols-lg-3 info-cards">
+          <div class="row row-cols-1 g-4 row-cols-md-2 row-cols-lg-3 d-md-flex justify-content-center align-items-center info-cards">
             <div class="col d-block justify-content-center  d-lg-flex">
               <div class="card d-flex justify-content-center align-items-center  p-5">
               <div class="card-logo notepad-icon d-flex justify-content-center align-items-center">
@@ -283,7 +283,7 @@
                 </div>
                <div class="card-body text-center py-3">
                  <h4 class="card-title">Export Presets</h4>
-                <p class="card-text py-3">Why I say old chap that is spiffing off his nut arse pear shaped plastered Jeffrey bodge barney some dodgy.!!</p>
+                <p class="card-text text-center py-3">Why I say old chap that is spiffing off his nut arse pear shaped plastered Jeffrey bodge barney some dodgy.!!</p>
                </div>
               </div>
             </div>
@@ -297,6 +297,79 @@
                  <h4 class="card-title">Export Presets</h4>
                 <p class="card-text py-3">Why I say old chap that is spiffing off his nut arse pear shaped plastered Jeffrey bodge barney some dodgy.!!</p>
                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+
+      <section id="pricing-section">
+        <div class="container">
+          <h1 class=" fw-bold text-center">Pricing</h1>
+          <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 d-md-flex justify-content-center align-items-center mt-5 pt-2 g-4">
+            <div class="col d-block d-lg-flex">
+              <div class="card d-flex justify-content-center align-items-center p-5">
+                <div >
+                  <img class=" img-fluid" src="images/logo-icon/rocket-startup.svg" alt="">
+                </div>
+                <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                  <h4 class="card-title fw-bold pt-4">Basic</h4>
+                  <p class="card-text small">Per Month</p>
+                  <h1 class="price-amount fw-bold py-4">$19.99</h1>
+                  <p class="pricing-text small ">10GB Bandwidth Internet
+                    Business & Financ Analysing
+                    15 Social Media Reviews
+                    Customer Managemet
+                    24/7 Support
+                  </p>
+                </div>
+                <div class="pricing-footer">
+                  <a href="#" class="card1-btn1 text-white">Get Started</a>
+                </div>
+              </div>
+            </div>
+            <div class="col d-block d-lg-flex">
+              <div class="card d-flex justify-content-center align-items-center p-5">
+                <div >
+                  <img class=" img-fluid" src="images/logo-icon/headphone.svg" alt="">
+                </div>
+                <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                  <h4 class="card-title fw-bold pt-4">Basic</h4>
+                  <p class="card-text small">Per Month</p>
+                  <h1 class="price-amount fw-bold py-4">$19.99</h1>
+                  <p class="pricing-text small ">10GB Bandwidth Internet
+                    Business & Financ Analysing
+                    15 Social Media Reviews
+                    Customer Managemet
+                    24/7 Support
+                  </p>
+                </div>
+                <div class="pricing-footer">
+                  <a href="#" class="card2-btn2 text-white">Get Started</a>
+                </div>
+              </div>
+            </div>
+            <div class="col d-block d-lg-flex">
+              <div class="card d-flex justify-content-center align-items-center p-5">
+                <div >
+                  <img class=" img-fluid" src="images/logo-icon/int-nest.svg" alt="">
+                </div>
+                <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                  <h4 class="card-title fw-bold pt-4">Basic</h4>
+                  <p class="card-text small">Per Month</p>
+                  <h1 class="price-amount fw-bold py-4">$19.99</h1>
+                  <p class="pricing-text small ">10GB Bandwidth Internet
+                    Business & Financ Analysing
+                    15 Social Media Reviews
+                    Customer Managemet
+                    24/7 Support
+                  </p>
+                </div>
+                <div class="pricing-footer">
+                  <a href="#" class="card3-btn3 text-white">Get Started</a>
+                </div>
               </div>
             </div>
           </div>
