--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg py-3">
+        <nav class="navbar navbar-expand-lg fixed-top py-3">
             <div class="container">
               <a class="navbar-brand brand-logo" href="#">Lumia</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,7 +54,7 @@
 
           <!-- Landing Banner section start -->
 
-          <section id="landing-banner" class="my-3">
+          <section id="landing-banner">
             <div class="container">
               <div class="banner-item  d-block d-md-flex justify-content-center align-content-center my-5">
                 <div class="banner-info col-12 col-md-6 mb-5">
