blog section added

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="#">Work</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Blog</a>
+                    <a class="nav-link" href="#blog">Blog</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">About</a>
@@ -373,6 +373,84 @@
               </div>
             </div>
           </div>
+        </div>
+      </section>
+
+
+
+
+
+      <section id="blog" class="my-5 py-5">
+        <div class="container">
+         <div class="blog-news">
+          <div class="blog-heading text-center blog-bgc d-flex flex-column justify-content-center align-content-center ">
+            <h6 class="text-white">Blog</h6>
+            <h1 class="text-white">Latest News</h1>
+          </div>
+          <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mt-5">
+            <div class="col d-block d-md-flex">
+              <div class="card">
+                <img class=" img-fluid" src="images/presentatoin-img.png" alt="">
+                <div class="card-body">
+                  <h4 class="card-title">How Wireless Technology more Changing Business.</h4>
+                  <p class="card-text">Why I say old chap that is spiffing off his nut arse pear shaped plastered Jeffrey bodge barney some dodgy.!!</p>
+                  <a href="#" class="btn btn-primary">Read More</a>
+                </div>
+              </div>
+            </div>
+            <div class="col d-block d-md-flex">
+              <div class="card">
+                <img class=" img-fluid" src="images/presentatoin-img.png" alt="">
+                <div class="card-body">
+                  <h4 class="card-title">How Wireless Technology more Changing Business.</h4>
+                  <p class="card-text">Why I say old chap that is spiffing off his nut arse pear shaped plastered Jeffrey bodge barney some dodgy.!!</p>
+                  <a href="#" class="btn btn-primary">Read More</a>
+                </div>
+              </div>
+            </div>
+            <div class="col d-block d-md-flex">
+              <div class="card">
+                <img class=" img-fluid" src="images/presentatoin-img.png" alt="">
+                <div class="card-body">
+                  <h4 class="card-title">How Wireless Technology more Changing Business.</h4>
+                  <p class="card-text">Why I say old chap that is spiffing off his nut arse pear shaped plastered Jeffrey bodge barney some dodgy.!!</p>
+                  <a href="#" class="btn btn-primary">Read More</a>
+                </div>
+              </div>
+            </div>
+            <div class="col d-block d-md-flex">
+              <div class="card">
+                <img class=" img-fluid" src="images/presentatoin-img.png" alt="">
+                <div class="card-body">
+                  <h4 class="card-title">How Wireless Technology more Changing Business.</h4>
+                  <p class="card-text">Why I say old chap that is spiffing off his nut arse pear shaped plastered Jeffrey bodge barney some dodgy.!!</p>
+                  <a href="#" class="btn btn-primary">Read More</a>
+                </div>
+              </div>
+            </div>
+            <div class="col d-block d-md-flex">
+              <div class="card">
+                <img class=" img-fluid" src="images/presentatoin-img.png" alt="">
+                <div class="card-body">
+                  <h4 class="card-title">How Wireless Technology more Changing Business.</h4>
+                  <p class="card-text">Why I say old chap that is spiffing off his nut arse pear shaped plastered Jeffrey bodge barney some dodgy.!!</p>
+                  <a href="#" class="btn btn-primary">Read More</a>
+                </div>
+              </div>
+            </div>
+            <div class="col d-block d-md-flex">
+              <div class="card">
+                <img class=" img-fluid" src="images/presentatoin-img.png" alt="">
+                <div class="card-body">
+                  <h4 class="card-title">How Wireless Technology more Changing Business.</h4>
+                  <p class="card-text">Why I say old chap that is spiffing off his nut arse pear shaped plastered Jeffrey bodge barney some dodgy.!!</p>
+                  <a href="#" class="btn btn-primary">Read More</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+         </div>
         </div>
       </section>
 
