about section 50% done

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a class="nav-link" href="#services">Services</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Work</a>
+                    <a class="nav-link" href="#pricing-section">Pricing</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#blog">Blog</a>
@@ -453,6 +453,64 @@
          </div>
         </div>
       </section>
+
+
+<!-- Blog section End -->
+
+<!-- About Us section start -->
+
+
+<section id="about-us" class="my-5 py-5">
+  <div class="container">
+    <div class="about-header d-flex flex-column justify-content-center align-content-center">
+      <h1 class="text-white m-auto">About Us</h1>
+    </div>
+    <div class="row row-cols-1 row-cols-md-1 mt-5 py-4 g-4">
+      <div class="col col-md-5 d-flex justify-content-center align-content-center">
+        <img class=" img-fluid" src="images/team-member.png" alt="">
+      </div>
+      <div class="col col-md-7">
+        <h1 class=" heading-text">Exclusive Agency For Technology Provide Soluation</h1>
+        <p class=" my-3">Grursus mal suada faci lisis Lorem ipsum dolarorit ametion consectetur elit. The Vesti at bulum nec odio aea the dumm ipsumm ipsum dolocons is suada a and fadolorit to the consectetur elit. Grursus mal suada faci lisis Lorem dolarorit the ametion consectetur elit. Vesti at bulum nec odio aea the dumm ipsumm ipsum dolocons is suada a and fadolorit to the consectetur .
+
+          Grursus mal suada faci lisis Lorem ipsum dolarorit ametion consectetur elit. Vesti at bulum nec odio aea the dumm ipsumm ipsum dolocons is suada a and fadolorit to the consectetur elit.</p>
+
+          <div class=" my-5">
+            <a href="#" class="article-btn text-white">Begin Today</a>
+          </div>
+
+      </div>
+    </div>
+
+
+    <div class="experiece-area my-5 py-5 ">
+      <div class="row">
+        <div class="grey-bgc col col-md-6 d-flex justify-content-center ">
+          <div class="white-circle my-auto">
+  
+          </div>
+        </div>
+        <div class="our-experience col col-md-6 p-5">
+          <h1 class=" text-white">We Work With 20 Years Of Experience</h1>
+          <p class=" text-white small">Grursus mal suada faci lisis Lorem ipsum dolarorit more a ametion that consectetur elit. Vesti at bulum nec odio aea the dumm ipsumm ipsum that dolocons rsus mal suada and fadolorit.</p>
+          <div class="list-item text-white ">
+            <ul>
+              <li class="experience-list">Web Design & Development</li>
+              <li class="experience-list">Best Leadership </li>
+              <li class="experience-list">Pixel Perfect</li>
+              <li class="experience-list">Online Support</li>
+              <li class="experience-list">Expert Team</li>
+              <li class="experience-list">Quick Access</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+   
+
+  </div>
+</section>
+
 
 
 
