about section added

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a class="nav-link" href="#blog">Blog</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#about-us">About</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
@@ -466,10 +466,10 @@
       <h1 class="text-white m-auto">About Us</h1>
     </div>
     <div class="row row-cols-1 row-cols-md-1 mt-5 py-4 g-4">
-      <div class="col col-md-5 d-flex justify-content-center align-content-center">
-        <img class=" img-fluid" src="images/team-member.png" alt="">
+      <div class="col col-md-6 d-flex justify-content-center align-content-center p-3">
+        <img class="img-fluid" src="images/team-member.png" alt="">
       </div>
-      <div class="col col-md-7">
+      <div class="col col-md-6">
         <h1 class=" heading-text">Exclusive Agency For Technology Provide Soluation</h1>
         <p class=" my-3">Grursus mal suada faci lisis Lorem ipsum dolarorit ametion consectetur elit. The Vesti at bulum nec odio aea the dumm ipsumm ipsum dolocons is suada a and fadolorit to the consectetur elit. Grursus mal suada faci lisis Lorem dolarorit the ametion consectetur elit. Vesti at bulum nec odio aea the dumm ipsumm ipsum dolocons is suada a and fadolorit to the consectetur .
 
@@ -484,8 +484,8 @@
 
 
     <div class="experiece-area my-5 py-5 ">
-      <div class="row">
-        <div class="grey-bgc col col-md-6 d-flex justify-content-center ">
+      <div class="row row-cols-1 row-cols-md-2 ">
+        <div class="grey-bgc col col-md-6 d-flex justify-content-center py-5">
           <div class="white-circle my-auto">
   
           </div>
@@ -505,9 +505,44 @@
           </div>
         </div>
       </div>
-    </div>
-   
+    </div> 
 
+    <div class="team-member">
+      <div class="heading-team text-center my-5 pt-5">
+        <h6 class=" text-uppercase fw-bold">Our Best</h6>
+        <h1 class="">Dedicated Team </h1>
+      </div>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 d-flex justify-content-center ">
+        <div class="col d-block d-lg-flex">
+          <div class="card member-profile p-4">
+            <img class=" img-fluid" src="images/team-member.png" alt="">
+            <div class="card-body text-center">
+              <h2 class="member-name">Michael Jackson</h2>
+              <p class="member-bio small">Ul / Ux Designer</p>
+            </div>
+          </div>
+        </div>
+        <div class="col d-block d-lg-flex">
+          <div class="card member-profile p-4">
+            <img class=" img-fluid" src="images/team-member.png" alt="">
+            <div class="card-body text-center">
+              <h2 class="member-name">Michael Jackson</h2>
+              <p class="member-bio small">Ul / Ux Designer</p>
+            </div>
+          </div>
+        </div>
+        <div class="col d-block d-lg-flex">
+          <div class="card member-profile p-4">
+            <img class=" img-fluid" src="images/team-member.png" alt="">
+            <div class="card-body text-center">
+              <h2 class="member-name">Michael Jackson</h2>
+              <p class="member-bio small">Ul / Ux Designer</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  
   </div>
 </section>
 
