--- a/index.html
+++ b/index.html
@@ -341,6 +341,9 @@
         </div>
       </section>
 
+
+      <!-- marketing section start -->
+
       <section id="marketing-section">
         <div class="container">
           <div
@@ -575,6 +578,12 @@
         </div>
       </section>
 
+      <!-- Marketig section End -->
+
+
+
+      <!-- Pricing section start -->
+
       <section id="pricing-section">
         <div class="container">
           <h1 class="fw-bold text-center">Pricing</h1>
@@ -709,6 +718,12 @@
           </div>
         </div>
       </section>
+
+      <!-- Pricing section End -->
+
+
+
+      <!-- Blog section Start -->
 
       <section id="blog" class="my-5 py-5">
         <div class="container">
@@ -972,6 +987,12 @@
         </div>
       </section>
 
+      <!-- About section End -->
+
+
+
+      <!-- Contact section start -->
+
       <section id="contact" class="mt-t pt-5">
         <div class="container w-75">
           <h1 class="contact-heading text-center my-5">Contact Us</h1>
@@ -1040,7 +1061,78 @@
           </div>
         </div>
       </section>
+
+      <!-- Contact section End -->
+
     </main>
+
+
+    <!-- Footer section Start -->
+
+    <footer id="footer">
+      <div class="container p-5">
+        <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-5">
+          <div class="col-6 col-md-4 col-lg-3  ">
+            <div class="footer-brand-info text-white p-3">
+              <h2 class="brand-name text-white">Lumia</h2>
+              <p class="brand-shor-details text-white small">Why I say old chap that is spiffing off his nut arse pear shaped plastered Jeffrey bodge barney some dodgy.!!</p>
+              <div class="footer-logo-icon d-flex w-auto gap-3">
+                <i class="fab fa-facebook fa-2x"></i>
+                <i class="fab fa-instagram fa-2x"></i>
+                <i class="fab fa-twitter fa-2x"></i>
+                <i class="fab fa-linkedin fa-2x"></i>
+              </div>
+            </div>
+
+          </div>
+          <div class="col-6 col-md-4 col-lg-3 ">
+            <div class="about-links">
+              <h2 class="text-white">About</h2>
+              <div class="other-links">
+                <a class="nav-link text-white" href="#">Facebook</a>
+                <a class="nav-link text-white" href="#">Marketing</a>
+                <a class="nav-link text-white" href="#">Sells</a>
+                <a class="nav-link text-white" href="#">Team work</a>
+                <a class="nav-link text-white" href="#">Leadership</a>
+              </div>
+
+            </div>
+          </div>
+          <div class=" d-none d-md-block col-md-4 col-lg-3">
+            <div class="about-links">
+              <h2 class="text-white">About</h2>
+              <div class="other-links">
+                <a class="nav-link text-white" href="#">Facebook</a>
+                <a class="nav-link text-white" href="#">Marketing</a>
+                <a class="nav-link text-white" href="#">Sells</a>
+                <a class="nav-link text-white" href="#">Team work</a>
+                <a class="nav-link text-white" href="#">Leadership</a>
+              </div>
+
+            </div>
+          </div>
+          <div class="d-none d-lg-block col-lg-3">
+            <div class="about-links">
+              <h2 class="text-white">About</h2>
+              <div class="other-links">
+                <a class="nav-link text-white" href="#">Facebook</a>
+                <a class="nav-link text-white" href="#">Marketing</a>
+                <a class="nav-link text-white" href="#">Sells</a>
+                <a class="nav-link text-white" href="#">Team work</a>
+                <a class="nav-link text-white" href="#">Leadership</a>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+      
+    </footer>
+
+
+
+
+
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
