--- a/index.html
+++ b/index.html
@@ -341,7 +341,6 @@
         </div>
       </section>
 
-
       <!-- marketing section start -->
 
       <section id="marketing-section">
@@ -580,8 +579,6 @@
 
       <!-- Marketig section End -->
 
-
-
       <!-- Pricing section start -->
 
       <section id="pricing-section">
@@ -720,8 +717,6 @@
       </section>
 
       <!-- Pricing section End -->
-
-
 
       <!-- Blog section Start -->
 
@@ -989,15 +984,19 @@
 
       <!-- About section End -->
 
-
-
       <!-- Contact section start -->
 
-      <section id="contact" class="mt-t pt-5">
+      <section id="contact" class="my-5 mb-5 py-5">
         <div class="container w-75">
           <h1 class="contact-heading text-center my-5">Contact Us</h1>
-          <div class="row row-cols-1 row-cols-lg-2 g-5">
-            <div class="col col-md-4 d-flex justify-content-center justify-content-lg-start">
+          <div class="row row-cols-1 row-cols-lg-2 g-5 mt-5">
+            <div
+              class="
+                col col-md-4
+                d-flex
+                justify-content-center justify-content-lg-start
+              "
+            >
               <div class="contact-details">
                 <div class="contact-info d-flex gap-3">
                   <div class="icon">
@@ -1038,23 +1037,47 @@
               </div>
             </div>
             <div class="col col-md-8">
-              <form action="" >
+              <form action="">
                 <div class="mb-3 d-flex justify-content-between gap-5">
-                 <div class=" w-50">
-                  <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Name">
-                 </div>
-                  <div class=" w-50">
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your Email">
+                  <div class="w-50">
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="exampleFormControlInput1"
+                      placeholder="Name"
+                    />
+                  </div>
+                  <div class="w-50">
+                    <input
+                      type="email"
+                      class="form-control"
+                      id="exampleFormControlInput1"
+                      placeholder="Your Email"
+                    />
                   </div>
                 </div>
                 <div class="mb-3">
-                  <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Subject">
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="exampleFormControlInput1"
+                    placeholder="Subject"
+                  />
                 </div>
                 <div class="mb-3">
-                  
-                  <textarea class="form-control" id="exampleFormControlTextarea1" placeholder=" Message" rows="6">
+                  <textarea
+                    class="form-control"
+                    id="exampleFormControlTextarea1"
+                    placeholder=" Message"
+                    rows="6"
+                  >
                   </textarea>
-                  <button class="btn btn-danger fw-bold w-25 mt-4" type="submit">Send</button>
+                  <button
+                    class="btn btn-danger fw-bold w-25 mt-4"
+                    type="submit"
+                  >
+                    Send
+                  </button>
                 </div>
               </form>
             </div>
@@ -1063,19 +1086,20 @@
       </section>
 
       <!-- Contact section End -->
-
     </main>
-
 
     <!-- Footer section Start -->
 
     <footer id="footer">
       <div class="container p-5">
         <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-5">
-          <div class="col-6 col-md-4 col-lg-3  ">
+          <div class="col-6 col-md-4 col-lg-3">
             <div class="footer-brand-info text-white p-3">
               <h2 class="brand-name text-white">Lumia</h2>
-              <p class="brand-shor-details text-white small">Why I say old chap that is spiffing off his nut arse pear shaped plastered Jeffrey bodge barney some dodgy.!!</p>
+              <p class="brand-shor-details text-white small">
+                Why I say old chap that is spiffing off his nut arse pear shaped
+                plastered Jeffrey bodge barney some dodgy.!!
+              </p>
               <div class="footer-logo-icon d-flex w-auto gap-3">
                 <i class="fab fa-facebook fa-2x"></i>
                 <i class="fab fa-instagram fa-2x"></i>
@@ -1083,9 +1107,8 @@
                 <i class="fab fa-linkedin fa-2x"></i>
               </div>
             </div>
-
           </div>
-          <div class="col-6 col-md-4 col-lg-3 ">
+          <div class="col-6 col-md-4 col-lg-3">
             <div class="about-links">
               <h2 class="text-white">About</h2>
               <div class="other-links">
@@ -1095,10 +1118,9 @@
                 <a class="nav-link text-white" href="#">Team work</a>
                 <a class="nav-link text-white" href="#">Leadership</a>
               </div>
-
             </div>
           </div>
-          <div class=" d-none d-md-block col-md-4 col-lg-3">
+          <div class="d-none d-md-block col-md-4 col-lg-3">
             <div class="about-links">
               <h2 class="text-white">About</h2>
               <div class="other-links">
@@ -1108,7 +1130,6 @@
                 <a class="nav-link text-white" href="#">Team work</a>
                 <a class="nav-link text-white" href="#">Leadership</a>
               </div>
-
             </div>
           </div>
           <div class="d-none d-lg-block col-lg-3">
@@ -1121,18 +1142,11 @@
                 <a class="nav-link text-white" href="#">Team work</a>
                 <a class="nav-link text-white" href="#">Leadership</a>
               </div>
-
             </div>
           </div>
         </div>
       </div>
-      
     </footer>
-
-
-
-
-
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
